fix: refine sc reclassify interactions
