# apps/api/app/shared/generated/openapi_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-06-25T13:09:54+00:00
+#   timestamp: 2026-06-25T16:43:36+00:00
 
 from __future__ import annotations
 
@@ -1030,6 +1030,10 @@ class TrainingJob(BaseModel):
 class UpdateAnnotationRequest(BaseModel):
     dataset_id: str = Field(..., title="Dataset Id")
     label: str = Field(..., title="Label")
+
+
+class UpdateDatasetRequest(BaseModel):
+    name: constr(min_length=1, max_length=255) = Field(..., title="Name")
 
 
 class UpdateEmbedConfigRequest(BaseModel):
