# openapi/openapi.yaml
@@ -239,6 +239,37 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/HTTPValidationError"
+    patch:
+      tags:
+        - datasets
+      summary: Update Dataset
+      operationId: update_dataset_api_v1_datasets__dataset_id__patch
+      parameters:
+        - name: dataset_id
+          in: path
+          required: true
+          schema:
+            type: string
+            title: Dataset Id
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateDatasetRequest"
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Dataset"
+        "422":
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HTTPValidationError"
   /api/v1/datasets/{dataset_id}/sparse-summary:
     get:
       tags:
@@ -8772,6 +8803,17 @@ components:
         - dataset_id
         - label
       title: UpdateAnnotationRequest
+    UpdateDatasetRequest:
+      properties:
+        name:
+          type: string
+          maxLength: 255
+          minLength: 1
+          title: Name
+      type: object
+      required:
+        - name
+      title: UpdateDatasetRequest
     UpdateEmbedConfigRequest:
       properties:
         model:
